# lugodev-example-bot

./: .gitignore  LICENSE  README.md  bot.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
